--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
                         <a class="col-xs-offset-1" href="config.html"><i class="glyphicon glyphicon-cog"></i> 网站配置</a>
                     </li>
                     <li>
-                        <a class="col-xs-offset-1" href="#"><i class="glyphicon glyphicon-user"></i> 管理员</a>
+                        <a class="col-xs-offset-1" href="admin.html"><i class="glyphicon glyphicon-user"></i> 管理员</a>
                     </li>
                     <li>
-                        <a class="col-xs-offset-1" href="#"><i class="glyphicon glyphicon-list"></i> 商品列表</a>
+                        <a class="col-xs-offset-1" href="list.html"><i class="glyphicon glyphicon-list"></i> 商品列表</a>
                     </li>
                     <li>
-                        <a class="col-xs-offset-1" href="#"><i class="glyphicon glyphicon-picture"></i> 用户列表</a>
+                        <a class="col-xs-offset-1" href="user.html"><i class="glyphicon glyphicon-picture"></i> 用户列表</a>
                     </li>
                 </ul>
             </nav>
