--- a/login.html
+++ b/login.html
@@ -62,7 +62,7 @@
         }
         var pwd = $("#pwd").val();
         if (!pwd) {
-            $("#erro_title").text('密码不能为空');
+            // $("#erro_title").text('密码不能为空');
             $("#error").modal('show');
             setTimeout(function() {
                 $("#error").modal('hide');
